--- a/MiniPoll/app/src/main/res/values/strings.xml
+++ b/MiniPoll/app/src/main/res/values/strings.xml
@@ -104,10 +104,13 @@
     <string name="help_manage_choice_title">Votre choix</string>
 
     <!-- Création générale -->
+    <string name="create_main_survey_title">Création d\'un sondage pour accord</string>
+    <string name="create_main_questionnary_title">Questionnaire</string>
+    <string name="create_main_help_title">Demande d\'aide à un ami</string>
     <string name="create_main_survey">Sondage pour accord</string>
     <string name="create_main_questionnary">Questionnaire</string>
     <string name="create_main_help">Demande d\'aide à un ami</string>
-    <string name="create_main">Création d\'une activité</string>
+    <string name="create_main_title">Création d\'une activité</string>
 
     <string name="create_surveyORquestionnary_friends_title">Amis à sonder</string>
     <string name="create_help_friends_title">Ami à sonder</string>
