--- a/MiniPoll/app/src/main/res/values/strings.xml
+++ b/MiniPoll/app/src/main/res/values/strings.xml
@@ -75,6 +75,8 @@
 
     <!-- Gestion générale -->
     <string name="poll_manage_question_title">Question </string>
+    <string name="poll_answer_title">Réponse</string>
+    <string name="poll_results_title">Résultats</string>
     <string name="nothing_to_show">Aucun élément à afficher</string>
 
     <!-- Gestion des sondages -->
