--- a/MiniPoll/app/src/main/res/values/strings.xml
+++ b/MiniPoll/app/src/main/res/values/strings.xml
@@ -20,10 +20,13 @@
     <string name="login_create_account">Créer un compte</string>
     <string name="login_connection">Connexion</string>
     <string name="login_password_forgotten">Mot de passe oublié ?</string>
+    <string name="login_password_forgotten_notification">Veuillez contacter l\'administrateur de l\'application afin d\'obtenir un nouvel accès à votre compte. </string>
     <string name="login_password_wrong">Votre mot de passe est incorrect</string>
 
     <string name="newAccount_title">Création d\'un compte</string>
     <string name="newAccount_confirmation_password">Confirmation du mot de passe</string>
+    <string name="newAccount_error">Ce nom d\'utilisateur existe déjà! Veuillez en choisir un autre.</string>
+    <string name="newAccount_notification">Le mot de passe n\'a pas été bien confirmé !</string>
 
     <!-- Création d'un profil -->
     <string name="create_title">Création d\'un profil</string>
