--- a/MiniPoll/app/src/main/res/values/strings.xml
+++ b/MiniPoll/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="app_user_firstname">Prénom</string>
     <string name="app_user_mail">Adresse mail</string>
     <string name="app_colon"> : </string>
+    <string name="app_error"> Une erreur inattendue est survenue ! </string>
 
     <!-- Login et connexion -->
     <string name="login_title">Se connecter</string>
