--- a/MiniPoll/app/src/main/res/values/strings.xml
+++ b/MiniPoll/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="app_user_surname">Nom</string>
     <string name="app_user_firstname">Prénom</string>
     <string name="app_user_mail">Adresse mail</string>
-    <string name="app_colon"> : </string>
+    <string name="app_user_bff">Meilleur ami</string>
     <string name="app_error"> Une erreur inattendue est survenue ! </string>
 
     <!-- Login et connexion -->
@@ -56,7 +56,7 @@
     <string name="my_profile_change_username">Changer d\'identifiant ?</string>
     <string name="my_profile_change_password">Changer de mot de passe ?</string>
     <string name="my_profile_id_id">Identifiant : </string>
-    <string name="my_profile_mdp_mdp">Mot de passe : </string>
+    <string name="my_profile_mdp">Mot de passe : **********</string>
     <string name="my_profile_mail_mail">Mail : </string>
     <string name="my_profile_nom_nom">Nom : </string>
     <string name="my_profile_prenom_prenom">Prénom : </string>
