--- a/MiniPoll/app/src/main/res/values/strings.xml
+++ b/MiniPoll/app/src/main/res/values/strings.xml
@@ -64,14 +64,14 @@
     <string name="my_profile_picture">Ma photo de profil </string>
 
     <!-- Modifier l'identifiant -->
-    <string name="change_username_title">Changement de l\'identifiant</string>
+    <string name="change_username_title">Changer d\'identifiant</string>
     <string name="change_username_new">Nouvel identifiant</string>
     <string name="change_username_confirmation">Confirmer avec le mot de passe</string>
     <string name="change_username_password_wrong">Le mot de passe est incorrect !</string>
     <string name="change_username_username_error">Cet identifiant est déjà utilisé ! Veuillez en choisir un autre.</string>
 
     <!-- Modifier le mot de passe -->
-    <string name="change_password_title">Changement du mot de passe</string>
+    <string name="change_password_title">Changer de mot de passe</string>
     <string name="change_password_new">Nouveau mot de passe</string>
     <string name="change_password_confirmation_new">Confirmer le nouveau mot de passe</string>
     <string name="change_password_confirmation_old">Confirmer avec l\'ancien mot de passe</string>
