--- a/MiniPoll/app/src/main/res/values/strings.xml
+++ b/MiniPoll/app/src/main/res/values/strings.xml
@@ -106,7 +106,9 @@
 
     <string name="surveys_manage_finalresults_title">Résultat final</string>
     <string name="surveys_manage_save">Enregistrer</string>
-    <string name="surveys_manage_invalid_value">Un score attribué a une valeur incorrecte</string>
+    <string name="surveys_manage_invalid_value">Un score attribué a une valeur incorrecte.</string>
+    <string name="surveys_manage_too_few_scores">Vous avez attribué trop peu de scores à ce sondage. </string>
+    <string name="surveys_manage_too_much_scores">Vous avez attribué trop de scores à ce sondage.</string>
 
     <!-- Gestion des questionnaires -->
     <string name="questionnary_manage_title">Questionnaires en cours</string>
@@ -138,6 +140,8 @@
     <string name="create_format_text">Texte</string>
 
     <string name="create_resume_title">Résumé</string>
+    <string name="create_next">Suivant</string>
+    <string name="create_next_element">+</string>
 
     <!-- Création de sondages -->
     <string name="create_survey_choice_title">Choix possibles</string>
@@ -150,6 +154,9 @@
     <string name="create_survey_choice_order_title">Modifier l\'ordre</string>
     <string name="create_survey_choice_order_description">Choix </string>
     <string name="create_survey_choice_order_send">Envoyer le sondage</string>
+    <string name="create_survey_number_choice">Nombre de choix à faire</string>
+    <string name = "create_survey_add_friends">Choisissez les amis qui participeront au sondage</string>
+    <string name = "create_survey_send">Choix des amis</string>
 
     <!-- Création de questionnaires -->
     <string name="create_questionnary_questionsList_title">Liste des questions</string>
