--- a/MiniPoll/app/src/main/res/values/strings.xml
+++ b/MiniPoll/app/src/main/res/values/strings.xml
@@ -8,12 +8,12 @@
     <string name="app_back">Précédent</string>
     <string name="app_modification">Modifier</string>
     <string name="app_confirmation">Confirmer</string>
-    <string name="app_user_username">Identifiant</string>
-    <string name="app_user_password">Mot de passe</string>
-    <string name="app_user_surname">Nom</string>
-    <string name="app_user_firstname">Prénom</string>
-    <string name="app_user_mail">Adresse mail</string>
-    <string name="app_user_bff">Meilleur ami</string>
+    <string name="app_user_username">Identifiant : </string>
+    <string name="app_user_password">Mot de passe : </string>
+    <string name="app_user_surname">Nom : </string>
+    <string name="app_user_firstname">Prénom : </string>
+    <string name="app_user_mail">Adresse mail : </string>
+    <string name="app_user_bff">Meilleur ami : </string>
     <string name="app_error"> Une erreur inattendue est survenue ! </string>
 
     <!-- Login et connexion -->
@@ -107,9 +107,10 @@
 
     <string name="surveys_manage_finalresults_title">Résultat final</string>
     <string name="surveys_manage_save">Enregistrer</string>
-    <string name="surveys_manage_invalid_value">Un score attribué a une valeur incorrecte.</string>
-    <string name="surveys_manage_too_few_scores">Vous avez attribué trop peu de scores à ce sondage. </string>
-    <string name="surveys_manage_too_much_scores">Vous avez attribué trop de scores à ce sondage.</string>
+    <string name="surveys_manage_invalid_value">Un classement attribué a une valeur incorrecte.</string>
+    <string name="surveys_manage_too_few_scores">Vous avez classé trop peu de possibilités. </string>
+    <string name="surveys_manage_too_much_scores">Vous avez classé trop de possibilités.</string>
+    <string name="surveys_manage_doublons">Vous avez attribué deux fois le même classement à une option.</string>
 
     <!-- Gestion des questionnaires -->
     <string name="questionnary_manage_title">Questionnaires en cours</string>
